test google analytics

--- a/JM_Budke_files/JM_Budke.css
+++ b/JM_Budke_files/JM_Budke.css
@@ -390,11 +390,15 @@ a:hover {
     color: #000000;
     text-decoration: underline;
 }
-.bumper {
-    font-size: 1px;
-    line-height: 1px;
+#widget1 a {
+    color: #463c3c;
+    text-decoration: none;
 }
 #widget0 a:hover {
+    color: #000000;
+    text-decoration: underline;
+}
+#widget1 a:hover {
     color: #000000;
     text-decoration: underline;
 }
@@ -406,7 +410,15 @@ a:hover {
     color: #463c3c;
     text-decoration: none;
 }
+#widget1 a:visited {
+    color: #333333;
+    text-decoration: none;
+}
 .spacer {
+    font-size: 1px;
+    line-height: 1px;
+}
+.bumper {
     font-size: 1px;
     line-height: 1px;
 }
