--- a/Outreach_files/Outreach.css
+++ b/Outreach_files/Outreach.css
@@ -2,12 +2,13 @@
     padding: 4px;
 }
 .paragraph_style {
-    color: #333333;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri';
     font-size: 24px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 29px;
     margin-bottom: 0px;
@@ -23,12 +24,13 @@
     text-transform: none;
 }
 .paragraph_style_1 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 20px;
     margin-bottom: 0px;
@@ -44,12 +46,13 @@
     text-transform: none;
 }
 .paragraph_style_2 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 22px;
     margin-bottom: 0px;
@@ -65,12 +68,13 @@
     text-transform: none;
 }
 .paragraph_style_3 {
-    color: #339900;
-    font-family: 'Calibri-Bold', 'Calibri', 'Calibri Bold', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(61, 166, 0);
+    font-family: 'Calibri-Bold', 'Calibri';
     font-size: 20px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: bold;
+    font-weight: 700;
     letter-spacing: 0;
     line-height: 26px;
     margin-bottom: 0px;
@@ -86,27 +90,40 @@
     text-transform: none;
 }
 .style_1 {
+    font-family: 'Calibri-Bold', 'Calibri';
     font-size: 22px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
     line-height: 30px;
 }
 .style_2 {
+    font-family: 'Calibri';
     font-size: 22px;
-    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
     line-height: 30px;
 }
 .style_3 {
-    font-weight: normal;
+    font-family: 'Calibri';
+    font-size: 20px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
 }
 .style_External_362_76 {
     position: relative;
 }
 .paragraph_style_4 {
-    color: #463c3c;
-    font-family: 'Calibri-Bold', 'Calibri', 'Calibri Bold', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri-Bold', 'Calibri';
     font-size: 14px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: bold;
+    font-weight: 700;
     letter-spacing: 0;
     line-height: 17px;
     margin-bottom: 0px;
@@ -122,12 +139,13 @@
     text-transform: none;
 }
 .paragraph_style_5 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 21px;
     margin-bottom: 0px;
@@ -143,12 +161,13 @@
     text-transform: none;
 }
 .paragraph_style_6 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 21px;
     margin-bottom: 0px;
@@ -164,15 +183,21 @@
     text-transform: none;
 }
 .style_4 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
     font-style: italic;
+    font-weight: 400;
+    line-height: 21px;
 }
 .paragraph_style_7 {
-    color: #333333;
-    font-family: 'Calibri-Bold', 'Calibri', 'Calibri Bold', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri-Bold', 'Calibri';
     font-size: 22px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: bold;
+    font-weight: 700;
     letter-spacing: 0;
     line-height: 30px;
     margin-bottom: 0px;
@@ -188,12 +213,13 @@
     text-transform: none;
 }
 .paragraph_style_8 {
-    color: #463c3c;
-    font-family: 'Calibri-Bold', 'Calibri', 'Calibri Bold', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: bold;
+    font-weight: 700;
     letter-spacing: 0;
     line-height: 25px;
     margin-bottom: 0px;
@@ -209,15 +235,21 @@
     text-transform: none;
 }
 .style_5 {
-    font-weight: bold;
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 21px;
 }
 .paragraph_style_9 {
-    color: #333333;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri';
     font-size: 22px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 27px;
     margin-bottom: 0px;
@@ -233,12 +265,13 @@
     text-transform: none;
 }
 .paragraph_style_10 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 18px;
     margin-bottom: 0px;
@@ -254,12 +287,13 @@
     text-transform: none;
 }
 .paragraph_style_11 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 18px;
     margin-bottom: 0px;
@@ -275,12 +309,13 @@
     text-transform: none;
 }
 .paragraph_style_12 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 22px;
     margin-bottom: 0px;
@@ -296,12 +331,13 @@
     text-transform: none;
 }
 .paragraph_style_13 {
-    color: #333333;
-    font-family: 'Calibri-Bold', 'Calibri', 'Calibri Bold', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri-Bold', 'Calibri';
     font-size: 22px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: bold;
+    font-weight: 700;
     letter-spacing: 0;
     line-height: 30px;
     margin-bottom: 0px;
@@ -317,12 +353,13 @@
     text-transform: none;
 }
 .paragraph_style_14 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 22px;
     margin-bottom: 0px;
@@ -338,16 +375,21 @@
     text-transform: none;
 }
 .style_6 {
+    font-family: 'Calibri';
     font-size: 12px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
     line-height: 17px;
 }
 .paragraph_style_15 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 22px;
     margin-bottom: 0px;
@@ -363,12 +405,13 @@
     text-transform: none;
 }
 .paragraph_style_16 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 21px;
     margin-bottom: 0px;
@@ -427,12 +470,13 @@
     position: relative;
 }
 .Body {
-    color: #463c3c;
+    color: rgb(88, 77, 77);
     font-family: 'ArialMT', 'Arial', sans-serif;
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 20px;
     margin-bottom: 0px;
@@ -448,12 +492,13 @@
     text-transform: none;
 }
 .Free_Form {
-    color: #463c3c;
+    color: rgb(88, 77, 77);
     font-family: 'ArialMT', 'Arial', sans-serif;
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 20px;
     margin-bottom: 0px;
@@ -469,12 +514,13 @@
     text-transform: none;
 }
 .Header {
-    color: #969696;
-    font-family: 'ArialMT', 'Arial', sans-serif;
+    color: rgb(167, 167, 167);
+    font-family: 'Arial-BoldMT', 'Arial', sans-serif;
     font-size: 36px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: bold;
+    font-weight: 700;
     letter-spacing: 0;
     line-height: 42px;
     margin-bottom: 0px;
@@ -511,12 +557,13 @@
     padding: 4px;
 }
 .Title {
-    color: #463c3c;
+    color: rgb(88, 77, 77);
     font-family: 'ArialMT', 'Arial', sans-serif;
     font-size: 20px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 25px;
     margin-bottom: 0px;
@@ -594,40 +641,64 @@
     opacity: 1.00;
 }
 a {
-    color: #463c3c;
+    color: rgb(88, 77, 77);
     text-decoration: none;
 }
 a:visited {
-    color: #333333;
+    color: rgb(66, 66, 66);
     text-decoration: none;
 }
 a.class1 {
     text-decoration: none;
 }
 a.class1:visited {
-    color: #333333;
+    color: rgb(66, 66, 66);
     text-decoration: none;
 }
 a.class1:hover {
-    color: #000000;
+    color: rgb(0, 0, 0);
     text-decoration: underline;
 }
 a.class2 {
     text-decoration: none;
 }
 a.class2:visited {
-    color: #333333;
+    color: rgb(66, 66, 66);
     text-decoration: none;
 }
 a.class2:hover {
-    color: #000000;
+    color: rgb(0, 0, 0);
     text-decoration: underline;
 }
 a:hover {
-    color: #000000;
+    color: rgb(0, 0, 0);
     text-decoration: underline;
 }
-.bumper {
+#widget1 a {
+    color: rgb(88, 77, 77);
+    text-decoration: none;
+}
+#widget0 a:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
+#widget1 a:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
+#widget0 a:visited {
+    color: rgb(66, 66, 66);
+    text-decoration: none;
+}
+#widget0 a {
+    color: rgb(88, 77, 77);
+    text-decoration: none;
+}
+#widget1 a:visited {
+    color: rgb(66, 66, 66);
+    text-decoration: none;
+}
+.spacer {
     font-size: 1px;
     line-height: 1px;
 }
@@ -635,19 +706,7 @@ a:hover {
     font-size: 1px;
     line-height: 1px;
 }
-#widget0 a:hover {
-    color: #000000;
-    text-decoration: underline;
-}
-#widget0 a:visited {
-    color: #333333;
-    text-decoration: none;
-}
-#widget0 a {
-    color: #463c3c;
-    text-decoration: none;
-}
-.spacer {
+.bumper {
     font-size: 1px;
     line-height: 1px;
 }
@@ -670,6 +729,9 @@ img {
     display: inline-block;
     vertical-align: baseline;
     margin-bottom:0.3em;
+}
+.inline-block.shape-with-text {
+    vertical-align: bottom;
 }
 .vertical-align-middle-middlebox {
     display: table;
