--- a/Research_files/Research.css
+++ b/Research_files/Research.css
@@ -2,12 +2,13 @@
     padding: 4px;
 }
 .paragraph_style {
-    color: #333333;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri';
     font-size: 24px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 29px;
     margin-bottom: 0px;
@@ -23,12 +24,13 @@
     text-transform: none;
 }
 .paragraph_style_1 {
-    color: #463c3c;
+    color: rgb(88, 77, 77);
     font-family: 'Arial-BoldMT', 'Arial', sans-serif;
     font-size: 12px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: bold;
+    font-weight: 700;
     letter-spacing: 0;
     line-height: 14px;
     margin-bottom: 0px;
@@ -47,12 +49,13 @@
     padding: 35px;
 }
 .paragraph_style_2 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 20px;
     margin-bottom: 0px;
@@ -68,17 +71,21 @@
     text-transform: none;
 }
 .style_2 {
+    font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
-    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
     line-height: 24px;
 }
 .paragraph_style_3 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 20px;
     margin-bottom: 0px;
@@ -94,27 +101,37 @@
     text-transform: none;
 }
 .style_3 {
+    font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
+    font-stretch: normal;
     font-style: italic;
-    font-weight: bold;
+    font-weight: 700;
     line-height: 21px;
 }
 .style_4 {
+    font-family: 'Calibri';
     font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
     line-height: 21px;
 }
 .style_5 {
+    font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
+    font-stretch: normal;
     font-style: italic;
+    font-weight: 400;
     line-height: 21px;
 }
 .paragraph_style_4 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 16px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 19px;
     margin-bottom: 0px;
@@ -130,47 +147,61 @@
     text-transform: none;
 }
 .style_6 {
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
     line-height: 18px;
 }
 .style_7 {
-    font-family: 'Calibri-Bold', 'Calibri', 'Calibri Bold', 'Calibri';
+    font-family: 'Calibri-Bold', 'Calibri';
     font-size: 15px;
-    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
     line-height: 18px;
 }
 .style_8 {
-    font-family: 'Calibri-Italic', 'Calibri', 'Calibri Italic', 'Calibri';
+    font-family: 'Calibri-Italic', 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: italic;
+    font-weight: 400;
     line-height: 18px;
 }
 .style_9 {
+    font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: italic;
-    font-weight: bold;
+    font-weight: 700;
     line-height: 18px;
 }
 .style_10 {
-    font-family: 'Calibri-BoldItalic', 'Calibri', 'Calibri Bold Italic', 'Calibri';
+    font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: italic;
-    font-weight: bold;
+    font-weight: 700;
     line-height: 18px;
 }
 .style_11 {
-    font-family: 'Calibri-Italic', 'Calibri', 'Calibri Italic', 'Calibri';
+    font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
+    font-stretch: normal;
     font-style: italic;
+    font-weight: 400;
     line-height: 21px;
 }
 .paragraph_style_5 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 16px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 21px;
     margin-bottom: 0px;
@@ -186,12 +217,13 @@
     text-transform: none;
 }
 .paragraph_style_6 {
-    color: #463c3c;
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 20px;
     margin-bottom: 0px;
@@ -218,20 +250,29 @@
     position: relative;
 }
 .style_12 {
+    font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
-    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
     line-height: 21px;
 }
 .style_13 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
     font-style: italic;
+    font-weight: 400;
+    line-height: 20px;
 }
 .paragraph_style_7 {
-    color: #463c3c;
+    color: rgb(88, 77, 77);
     font-family: 'ArialMT', 'Arial', sans-serif;
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 17px;
     margin-bottom: 0px;
@@ -247,36 +288,56 @@
     text-transform: none;
 }
 .style_14 {
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    font-family: 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
 }
 .style_15 {
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
-    font-weight: bold;
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 18px;
 }
 .style_16 {
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
     font-style: italic;
+    font-weight: 400;
+    line-height: 18px;
 }
 .style_External_699_1013 {
     position: relative;
 }
 .style_17 {
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    font-family: 'Calibri';
     font-size: 8px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
     line-height: 10px;
 }
 .style_18 {
-    font-family: 'Calibri', 'ArialMT', 'Arial', sans-serif;
+    font-family: 'Calibri';
     font-size: 11px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
     line-height: 13px;
 }
 .paragraph_style_8 {
-    color: #333333;
-    font-family: 'Calibri-Bold', 'Calibri', 'Calibri Bold', 'ArialMT', 'Arial', sans-serif;
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri-Bold', 'Calibri';
     font-size: 28px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: bold;
+    font-weight: 700;
     letter-spacing: 0;
     line-height: 39px;
     margin-bottom: 0px;
@@ -299,12 +360,13 @@
     position: relative;
 }
 .Free_Form {
-    color: #463c3c;
+    color: rgb(88, 77, 77);
     font-family: 'ArialMT', 'Arial', sans-serif;
     font-size: 15px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 20px;
     margin-bottom: 0px;
@@ -320,12 +382,13 @@
     text-transform: none;
 }
 .Header {
-    color: #969696;
-    font-family: 'ArialMT', 'Arial', sans-serif;
+    color: rgb(167, 167, 167);
+    font-family: 'Arial-BoldMT', 'Arial', sans-serif;
     font-size: 36px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: bold;
+    font-weight: 700;
     letter-spacing: 0;
     line-height: 42px;
     margin-bottom: 0px;
@@ -353,12 +416,13 @@
     position: relative;
 }
 .Title {
-    color: #463c3c;
+    color: rgb(88, 77, 77);
     font-family: 'ArialMT', 'Arial', sans-serif;
     font-size: 20px;
+    font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 25px;
     margin-bottom: 0px;
@@ -392,37 +456,37 @@
     position: relative;
 }
 a {
-    color: #463c3c;
+    color: rgb(88, 77, 77);
     text-decoration: none;
 }
 a:visited {
-    color: #333333;
+    color: rgb(66, 66, 66);
     text-decoration: none;
 }
 a.class1 {
     text-decoration: none;
 }
 a.class1:visited {
-    color: #666666;
+    color: rgb(121, 121, 121);
     text-decoration: none;
 }
 a.class1:hover {
-    color: #000000;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 a.class2 {
     text-decoration: none;
 }
 a.class2:visited {
-    color: #666666;
+    color: rgb(121, 121, 121);
     text-decoration: none;
 }
 a.class2:hover {
-    color: #000000;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 a:hover {
-    color: #000000;
+    color: rgb(0, 0, 0);
     text-decoration: underline;
 }
 ol  { 
@@ -437,7 +501,31 @@ ol  {
           text-transform:none ;
           border: none;          
         }
-.bumper {
+#widget1 a {
+    color: rgb(88, 77, 77);
+    text-decoration: none;
+}
+#widget0 a:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
+#widget1 a:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
+#widget0 a:visited {
+    color: rgb(66, 66, 66);
+    text-decoration: none;
+}
+#widget0 a {
+    color: rgb(88, 77, 77);
+    text-decoration: none;
+}
+#widget1 a:visited {
+    color: rgb(66, 66, 66);
+    text-decoration: none;
+}
+.spacer {
     font-size: 1px;
     line-height: 1px;
 }
@@ -445,19 +533,7 @@ ol  {
     font-size: 1px;
     line-height: 1px;
 }
-#widget0 a:hover {
-    color: #000000;
-    text-decoration: underline;
-}
-#widget0 a:visited {
-    color: #333333;
-    text-decoration: none;
-}
-#widget0 a {
-    color: #463c3c;
-    text-decoration: none;
-}
-.spacer {
+.bumper {
     font-size: 1px;
     line-height: 1px;
 }
@@ -480,6 +556,9 @@ img {
     display: inline-block;
     vertical-align: baseline;
     margin-bottom:0.3em;
+}
+.inline-block.shape-with-text {
+    vertical-align: bottom;
 }
 .vertical-align-middle-middlebox {
     display: table;
