--- a/Teaching_files/Teaching.css
+++ b/Teaching_files/Teaching.css
@@ -602,11 +602,6 @@
     text-indent: -18px;
     text-transform: none;
 }
-.style_21 {
-    color: rgb(88, 77, 77);
-    line-height: 23px;
-    opacity: 1.00;
-}
 .paragraph_style_20 {
     color: rgb(88, 77, 77);
     font-family: 'ArialMT', 'Arial', sans-serif;
@@ -629,21 +624,23 @@
     text-indent: -18px;
     text-transform: none;
 }
-.style_22 {
+.style_21 {
+    color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
     font-style: normal;
     font-weight: 400;
     line-height: 23px;
+    opacity: 1.00;
 }
-.style_23 {
-    font-family: 'Calibri';
-    font-size: 11px;
+.style_22 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 16px;
     font-stretch: normal;
-    font-style: normal;
+    font-style: italic;
     font-weight: 400;
-    line-height: 16px;
+    line-height: 23px;
 }
 .paragraph_style_21 {
     color: rgb(66, 66, 66);
@@ -890,6 +887,9 @@
     text-indent: 0px;
     text-transform: none;
 }
+.style_External_651_2657 {
+    position: relative;
+}
 .style_SkipStroke {
     background: transparent;
     opacity: 1.00;
@@ -903,9 +903,6 @@
     opacity: 1.00;
 }
 .style_External_699_66 {
-    position: relative;
-}
-.style_External_651_2520 {
     position: relative;
 }
 .Free_Form {
@@ -952,7 +949,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.Normal_External_651_2520 {
+.Normal_External_651_2657 {
     position: relative;
 }
 .Normal_External_699_66 {
@@ -998,11 +995,11 @@
     background: transparent;
     opacity: 1.00;
 }
-.graphic_shape_layout_style_default_External_604_45 {
-    position: relative;
-}
 .graphic_shape_layout_style_default {
     padding: 4px;
+}
+.graphic_shape_layout_style_default_External_604_45 {
+    position: relative;
 }
 a {
     color: rgb(88, 77, 77);
